# gwf-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/commands/: bisect.rs  cleanup.rs  commit.rs  completions.rs  config.rs  feature.rs  hotfix.rs  init.rs  mod.rs  pr.rs  release.rs  standup.rs  stats.rs  status.rs  sync.rs  tag.rs  undo.rs
src/config/: mod.rs
src/git/: mod.rs
src/utils/: mod.rs
src/workflows/: mod.rs
tests/: integration_test.rs
